// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox <ParcelBox /> 1`] = `
<div
  className="App__productComplement___3_X5C"
>
  ou 
  3
  x de
  <span
    className="App__currency___2-n_1"
  >
    R$
  </span>
  <span
    className="App__amount___25x4z"
  >
    35,01
  </span>
  <strong>
    Sem Juros
  </strong>
</div>
`;

exports[`Test File ProductBox <ProductBox /> 1`] = `
<div
  className="App__product___3XoPp"
>
  <picture
    className="SquareBox__BoxSquare-hl450s-0 jLcvmP"
  >
    <div
      className="SquareBox__BoxSquareInner-hl450s-1 eelxeG"
    />
  </picture>
  <div
    className="App__productTitle___3wgab"
  >
    Gabinete Slim DT-100BK C/Fonte PS-200 FX C3TECH S/Cabo
  </div>
  <div
    className="App__productPrice___ZoumY"
  >
    <span
      className="App__currency___2-n_1"
    >
      R$
    </span>
    <span
      className="App__amount___25x4z"
    >
      284,00
    </span>
  </div>
  <div
    className="App__productComplement___3_X5C"
  >
    ou 
    3
    x de
    <span
      className="App__currency___2-n_1"
    >
      R$
    </span>
    <span
      className="App__amount___25x4z"
    >
      94,67
    </span>
    <strong>
      Sem Juros
    </strong>
  </div>
  <div
    className="App__productButtons___2Y3pI"
  >
    <a
      className="btn App__btn___1w-MS App__btnDetail___13UmL"
      href="/product/gabinete-slim-dt-100bk-c-fonte-ps-200-fx-c3tech"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
    <a
      className="btn App__btn___1w-MS App__btnBuy___2ICLf"
      href="/product"
      onClick={[Function]}
    >
      Comprar
    </a>
  </div>
</div>
`;
